@@ -5,6 +5,7 @@ Upcoming version
 [TASK]    Exclude all parameters (including filters) from cHash calculation, thanks to Uwe Hawkeye1909, https://github.com/tpwd/ke_search/issues/187
 [BUGFIX]  Allow to use 'loadFlexformsFromOtherCE' parameter for TypoScript-instantiated plugins, thanks to Garvin Hicking, https://github.com/tpwd/ke_search/pull/152
 [BUGFIX]  Avoid undefined array key "sortWithoutSearchword", "resultsPerPage" and "noResultsText", https://github.com/tpwd/ke_search/issues/151
+[BUGFIX]  Avoid slow TYPO3 backend list view due to missing sql index, thanks to Daniel Siepmann, https://github.com/tpwd/ke_search/issues/190
 
 Version 5.0.4, 15 September 2023
 [TASK]    Exclude ke_search parameters from cacheHash validation, thanks to Andreas Mühe and schlotzz, https://github.com/tpwd/ke_search/issues/149
